increase permgen size and remove lein-cider